<resources>
    <string name="app_name">Infláció kalkulátor</string>
    <string name="night_mode">Éjszakai mód</string>
    <string name="day_mode">Nappali mód</string>
    <string name="settings">Beállítások</string>
    <string name="old_value">R. érték</string>
    <string name="new_value">Ú. érték</string>
    <string name="new_rounded_value">Új k. érték</string>
    <string name="quantity">Menny.</string>
    <string name="Total">Új ár</string>
    <string name="Ok">OK</string>
    <string name="recalculate">Újra számol</string>
    <string name="All_field_required">Minden mező kitöltése kötelező</string>
</resources>
