<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textViewCol5"
        style="@style/ListItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/textViewColHead5"
        app:layout_constraintTop_toBottomOf="@+id/textViewColHead5" />

    <TextView
        android:id="@+id/textViewCol4"
        style="@style/ListItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/textViewColHead4"
        app:layout_constraintTop_toBottomOf="@+id/textViewColHead4" />

    <TextView
        android:id="@+id/textViewCol1"
        style="@style/ListItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewColHead1" />

    <TextView
        android:id="@+id/textViewCol3"
        style="@style/ListItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/textViewColHead3"
        app:layout_constraintTop_toBottomOf="@+id/textViewColHead3" />

    <TextView
        android:id="@+id/textViewCol2"
        style="@style/ListItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/textViewColHead2"
        app:layout_constraintTop_toBottomOf="@+id/textViewColHead2" />

    <TextView
        android:id="@+id/textViewColHead1"
        style="@style/ListItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/old_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewColHead2"
        style="@style/ListItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/new_value"
        app:layout_constraintStart_toEndOf="@+id/textViewColHead1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewColHead3"
        style="@style/ListItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/new_rounded_value"
        app:layout_constraintStart_toEndOf="@+id/textViewColHead2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewColHead4"
        style="@style/ListItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/quantity"
        app:layout_constraintStart_toEndOf="@+id/textViewColHead3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewColHead5"
        style="@style/ListItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Total"
        app:layout_constraintStart_toEndOf="@+id/textViewColHead4"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>